--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Raleway:wght@300;700&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/header.css" />
-    <link rel="stylesheet" href="/body.css" />
-    <link rel="stylesheet" href="/footer.css" />
-    <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="body.css" />
+    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="dist/style.css">
 
 </head>
 
@@ -62,7 +62,7 @@
                     </button>
                 </div>
                 <div class="fresh-life__mouse-img inside-content">
-                    <img src="/assets/scroll.svg" alt="scroll">
+                    <img src="assets/scroll.svg" alt="scroll">
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
         <div class="about">
             <div class="about__content inside-content">
                 <div class="about-raspberry">
-                    <img src="/assets/about-us-raspberry.png" alt="raspberry">
+                    <img src="assets/about-us-raspberry.png" alt="raspberry">
                 </div>
                 <div class="about-text">
                     <h2 class="about-text__block-title">About Us</h2>
@@ -93,21 +93,21 @@
                 <div class="our-services__nav">
                     <button class="our-services__nav-btn">
                         <span class="our-services__nav-btn-name">Online Shopping</span>
-                        <img src="/assets/our-services_shopping-cart.png" alt="shopping-cart">
+                        <img src="assets/our-services_shopping-cart.png" alt="shopping-cart">
                     </button>
                     <button class="our-services__nav-btn">
                         <span class="our-services__nav-btn-name">Quality Product</span>
-                        <img src="/assets/our-services_harvest.png" alt="quality">
+                        <img src="assets/our-services_harvest.png" alt="quality">
                     </button>
                     <button class="our-services__nav-btn">
                         <span class="our-services__nav-btn-name">
                             Domestic & International<br> Delivery
                         </span>
-                        <img src="/assets/our-services_earth.png" alt="earth">
+                        <img src="assets/our-services_earth.png" alt="earth">
                     </button>
                     <button class="our-services__nav-btn">
                         <span class="our-services__nav-btn-name">Well Organized</span>
-                        <img src="/assets/our-services_carrot.png" alt="carrot">
+                        <img src="assets/our-services_carrot.png" alt="carrot">
                     </button>
                 </div>
                 <div class="our-services_text">
@@ -129,19 +129,19 @@
                 </div>
                 <div class="gallery-block">
                     <div class="gallery-img1">
-                        <img src="/assets/gallery1.png" alt="peach" class="img-peach" />
+                        <img src="assets/gallery1.png" alt="peach" class="img-peach" />
                     </div>
                     <div class="gallery-img2">
-                        <img src="/assets/gallery2.png" alt="img-milk" />
+                        <img src="assets/gallery2.png" alt="img-milk" />
                     </div>
                     <div class="gallery-img3">
-                        <img src="/assets/gallery3.png" alt="img-blueberry" />
+                        <img src="assets/gallery3.png" alt="img-blueberry" />
                     </div>
                     <div class="gallery-img4">
-                        <img src="/assets/gallery4.png" alt="img-blackberry" />
+                        <img src="assets/gallery4.png" alt="img-blackberry" />
                     </div>
                     <div class="gallery-img5">
-                        <img src="/assets/gallery5.png" alt="img-persimmon" />
+                        <img src="assets/gallery5.png" alt="img-persimmon" />
                     </div>
                 </div>
                 <form action="#" method="get">
